moved the tree boxes in the main content beside each other, fixed the newsletter section being too long vertically

--- a/the-electric-owls/css/styles.css
+++ b/the-electric-owls/css/styles.css
@@ -212,3 +212,27 @@ footer {
         max-width: 60ch;
     }
 }
+
+/* ***************** Media Query for 1920px ***************** */
+
+@media screen and (min-width: 1920px) {
+    footer div.container,
+    header div.container,
+    main {
+        max-width: 1720px;
+        margin: 0 auto;
+    }
+
+    main > section,
+    main aside {
+        width: calc((100% / 3) - (4rem / 3));
+    }
+
+    aside {
+        height: fit-content;
+    }
+
+    .container {
+        padding: 0;
+    }
+}
